--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="app-container">
         <!-- ЛЕВАЯ ПАНЕЛЬ: Меню 7 шагов -->
         <aside class="sidebar-logo">
-         
+            <div class="logo-vertical" id="logoYasen">
+                <!-- Заполнится JS -->
+            </div>
             <div class="progress-track">
                 <div class="steps-container" id="stepsMenu">
                                       <!-- Меню 6 шагов -->
