--- a/index.html
+++ b/index.html
@@ -189,11 +189,10 @@
 
         <!-- НИЖНЯЯ ПАНЕЛЬ: Карточка выбора -->
         <footer class="selection-card" id="selectionCard">
-            <h3><i class="fas fa-clipboard-list"></i> Ваша подборка</h3>
+            <p><i class="fas fa-clipboard-list"></i> Ваша подборка</p>
             <div class="tags-container" id="selectionTags">
                 <div class="empty-state">
-                    <i class="fas fa-clipboard"></i>
-                    <p>Начните выбирать параметры</p>
+                       
                 </div>
             </div>
             <button class="btn-primary" id="finalButton" disabled>Записаться на тест-драйв</button>
