--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="preload" href="style-800.css" as="style" media="(min-width: 481px) and (max-width: 800px)">
      <link rel="preload" href="style-1065.css" as="style" media="(max-width: 1065px)">
     <link rel="preload" href="style-1200.css" as="style" media="(max-width: 1200px)">
+    <link rel="preload" rel="stylesheet" href="style-mobile.css">
     
     <!-- Main stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -34,6 +35,7 @@
 <link rel="stylesheet" href="style-800.css" media="(max-width: 800px)">
 <link rel="stylesheet" href="style-480.css" media="(max-width: 480px)">
 <link rel="stylesheet" href="style-360.css" media="(max-width: 360px)">
+<link rel="stylesheet" href="style-mobile.css">
 
     
     <title>Ваш персональный гид в мире комфорта и стиля</title>
