--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
             </div>
             
             <!-- Контент для тест-драйва (скрыт по умолчанию) -->
-            <div  id="testContent" >
-                <!-- Будет заполняться через JS -->
-            </div>
+                <div class="shops-grid" id="shopsGrid">
+            !-- Будет заполняться через JS -->
+                </div>
         </main>
 
   
