--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             
             <!-- Контент для тест-драйва (скрыт по умолчанию) -->
                 <div class="shops-grid" id="shopsGrid">
-            !-- Будет заполняться через JS -->
+            <!-- Будет заполняться через JS -->
                 </div>
         </main>
 
