--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="preload" rel="stylesheet" href="style-mobile.css" as="style">
     
     <!-- Main stylesheet -->
-    <link rel="stylesheet" href="style.css" as="style>
+    <link rel="stylesheet" href="style.css" as="style">
     
     <!-- Conditional stylesheets -->
 <link rel="stylesheet" href="style-1200.css" media="(max-width: 1200px)">
