--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
             <!-- Навигация -->
             <div class="panel-navigation">
                 <button class="btn-nav btn-prev" id="prevBtn" disabled>
-                    <i class="fas fa-arrow-left"></i> <span>Назад</span>
+                    <i class="fas fa-arrow-left"></i> <span></span>
                 </button>
                 <span class="step-counter">Шаг <span id="currentStepNum">0</span> из 7</span>
                 <button class="btn-nav btn-next" id="nextBtn">
-                    <span>Далее</span> <i class="fas fa-arrow-right"></i>
+                    <span></span> <i class="fas fa-arrow-right"></i>
                 </button>
             </div>
             
