--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <title>Ваш персональный гид в мире комфорта и стиля</title>
 </head>
 <body>
+    <script src="script.js"></script>
     <div class="app-container">
         <!-- ЛЕВАЯ ПАНЕЛЬ: Меню 7 шагов -->
         <aside class="sidebar-logo">
